cron_log.log
[main 26eb5d3] Timed Update rio 10/04/2026
 2 files changed, 1 insertion(+), 1 deletion(-)
 create mode 100644 cron_log.log
To https://github.com/pauloperes83/palpitesjogodobicho-site.git
   effc3a1..26eb5d3  main -> main
[main 3c6032e] Auto Update 11/04/2026 23:04:01
 2 files changed, 41 insertions(+), 82 deletions(-)
To https://github.com/pauloperes83/palpitesjogodobicho-site.git
   3c30eee..3c6032e  main -> main
[main cc2dbc4] Auto Update 11/04/2026 23:13:01
 3 files changed, 58 insertions(+), 16 deletions(-)
To https://github.com/pauloperes83/palpitesjogodobicho-site.git
   3c6032e..cc2dbc4  main -> main
[main d2c5a12] Auto Update 11/04/2026 23:19:01
 3 files changed, 167 insertions(+), 172 deletions(-)
To https://github.com/pauloperes83/palpitesjogodobicho-site.git
   cc2dbc4..d2c5a12  main -> main
[main 7979e9b] Auto Update 11/04/2026 23:23:01
 3 files changed, 176 insertions(+), 163 deletions(-)
To https://github.com/pauloperes83/palpitesjogodobicho-site.git
   d2c5a12..7979e9b  main -> main
[main ecf9115] Auto Update 11/04/2026 23:29:01
 3 files changed, 28 insertions(+), 8 deletions(-)
To https://github.com/pauloperes83/palpitesjogodobicho-site.git
   7979e9b..ecf9115  main -> main
[main 4598b25] Auto Update 11/04/2026 23:35:02
 3 files changed, 79 insertions(+), 85 deletions(-)
To https://github.com/pauloperes83/palpitesjogodobicho-site.git
   ecf9115..4598b25  main -> main
[main 4056b57] Auto Update 11/04/2026 23:42:01
 3 files changed, 122 insertions(+), 48 deletions(-)
To https://github.com/pauloperes83/palpitesjogodobicho-site.git
   4598b25..4056b57  main -> main
[main a1e02f3] Auto Update 11/04/2026 23:46:01
 3 files changed, 27 insertions(+), 28 deletions(-)
To https://github.com/pauloperes83/palpitesjogodobicho-site.git
   4056b57..a1e02f3  main -> main
[main 4dc87c3] Auto Update 13/04/2026
 1 file changed, 58 insertions(+), 8 deletions(-)
To https://github.com/pauloperes83/palpitesjogodobicho-site.git
   3f99cda..4dc87c3  main -> main
✅ SUCESSO! Site atualizado para 13/04/2026
[main a313571] Auto Update 13/04/2026
 1 file changed, 19 insertions(+), 17 deletions(-)
To https://github.com/pauloperes83/palpitesjogodobicho-site.git
   4dc87c3..a313571  main -> main
✅ SUCESSO! Ajustado para 13/04/2026
[main c533c59] Auto Update 13/04/2026
 1 file changed, 19 insertions(+), 17 deletions(-)
To https://github.com/pauloperes83/palpitesjogodobicho-site.git
   a313571..c533c59  main -> main
✅ SUCESSO TOTAL! Data: 13/04/2026
  File "/var/www/meusite/robo_rio.py", line 8
    CHAVE = ""<!--MARCA_AQUI-->""
               ^
SyntaxError: invalid syntax
[main 177855d] Auto Update 13/04/2026
 1 file changed, 23 insertions(+), 21 deletions(-)
To https://github.com/pauloperes83/palpitesjogodobicho-site.git
   c533c59..177855d  main -> main
✅ SUCESSO! Galo, Borboleta(13) e Camelo(31) prontos.
[main 6f12bd8] Auto Update 13/04/2026
 1 file changed, 18 insertions(+), 16 deletions(-)
To https://github.com/pauloperes83/palpitesjogodobicho-site.git
   177855d..6f12bd8  main -> main
✅ SUCESSO! Data processada: 13/04/2026
[main 0da877a] Auto Update 13/04/2026
 1 file changed, 17 insertions(+), 15 deletions(-)
To https://github.com/pauloperes83/palpitesjogodobicho-site.git
   6f12bd8..0da877a  main -> main
✅ SUCESSO! Site e texto atualizados para 13/04/2026
[main 299bd20] Auto Update RIO 14/04/2026
 1 file changed, 31 insertions(+), 29 deletions(-)
To https://github.com/pauloperes83/palpitesjogodobicho-site.git
   a114c79..299bd20  main -> main
✅ SUCESSO RIO! Palpites para 14/04/2026 atualizados.
[main abf2cdd] Auto Update RIO 14/04/2026 with Cookies
 1 file changed, 37 insertions(+), 15 deletions(-)
To https://github.com/pauloperes83/palpitesjogodobicho-site.git
 + 971feee...abf2cdd main -> main (forced update)
✅ SUCESSO RIO! Palpites para 14/04/2026 e Cookies atualizados.
[main 0f0027a] Auto Update RIO 15/04/2026 with Cookies
 1 file changed, 30 insertions(+), 28 deletions(-)
To https://github.com/pauloperes83/palpitesjogodobicho-site.git
 + 31b71e1...0f0027a main -> main (forced update)
✅ SUCESSO RIO! Palpites para 15/04/2026 e Cookies atualizados.
[main e21d32d] Auto Update RIO 16/04/2026 with Cookies
 1 file changed, 31 insertions(+), 29 deletions(-)
To https://github.com/pauloperes83/palpitesjogodobicho-site.git
   88b8461..e21d32d  main -> main
✅ SUCESSO RIO! Palpites para 16/04/2026 e Cookies atualizados.
Traceback (most recent call last):
  File "/var/www/meusite/robo_rio.py", line 114, in <module>
    enviar_pro_github(data_str, "Rio")
TypeError: enviar_pro_github() missing 1 required positional argument: 'loteria_nome'
From https://github.com/pauloperes83/palpitesjogodobicho-site
 * branch            main       -> FETCH_HEAD
Already up to date.
[main 605504f] Auto Update Atualização Rio Safe Mode
 4 files changed, 50 insertions(+), 30 deletions(-)
To https://github.com/pauloperes83/palpitesjogodobicho-site.git
   269ad03..605504f  main -> main
🛡️ Iniciando Blindagem para Atualização...
✅ Atualização finalizado com sucesso e páginas preservadas!
✅ SUCESSO RIO! Palpites para 17/04/2026 e Cookies atualizados.
